# cloakerdezyv1

./: .body.json  .err.txt  .gitignore  README.md  key  key.pub  next.config.ts  package-lock.json  package.json  pesquisa.md  proxy.ts
app/: globals.css  layout.tsx
app/access-denied/: page.tsx
app/admin/: page.tsx  profiles-panel.tsx
app/dashboard/: page.tsx
app/login/: actions.ts  page.tsx  state.ts
app/register/: page.tsx
audio-encryption-poc/: README.md  Untitled  pyproject.toml  requirements.txt
audio-encryption-poc/examples/batch_out/: benchmark_report.csv  benchmark_report.json
audio-encryption-poc/scripts/: benchmark.py
audio-encryption-poc/src/audio_encryption_poc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
audio-encryption-poc/src/audio_poc/: __init__.py  asr.py  cli.py  dsp.py  io_utils.py  metrics.py  pipeline.py  presets.py  video_pipeline.py  web_ui.py
audio-encryption-poc/src/audio_poc/cloak/: __init__.py  composer.py  ffmpeg_utils.py  targets.py
audio-encryption-poc/src/audio_poc/cloak/audio/: __init__.py  art_imperceptible.py  ensemble.py  formant_suppress.py  injection_bed.py  psychoacoustic.py  tts_underlay.py  whisper_attack.py  yamnet_attack.py
audio-encryption-poc/src/audio_poc/cloak/track/: __init__.py  mp4_metadata.py  srt_injector.py
audio-encryption-poc/src/audio_poc/cloak/verify/: __init__.py  gemini.py  local.py
audio-encryption-poc/src/audio_poc/cloak/visual/: __init__.py  brand_overlay.py  prompt_inject.py  stego_downscale.py  surrogate_patch.py  text_overlay.py
audio-encryption-poc/web-demo/: README.md
lib/auth/: admin.ts  phone.ts  profile.ts
lib/camouflage/: job-store.ts  processor.ts  worker.ts
scripts/: camouflage-worker.ts
supabase/: config.toml  schema.sql  verify-rls.sql
(+24 files in other folders)
