[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-encryption-poc"
version = "0.1.0"
description = "PoC pipeline for phase-stereo audio protection against ASR."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "soundfile>=0.12",
  "jiwer>=3.0",
  "pandas>=2.2",
  "tqdm>=4.66",
  "gradio>=4.44",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
